[ISSUE #11441] Add console-ui Dark mode (#11445)
* fix NPE

* fix NPE

* add console-ui dark mode

* merge

* merge

--- a/console-ui/src/pages/SettingCenter/index.scss
+++ b/console-ui/src/pages/SettingCenter/index.scss
@@ -1,5 +1,5 @@
 /*!
- * Copyright 1999-2018 Alibaba Group Holding Ltd.
+ * Copyright 1999-2023 Alibaba Group Holding Ltd.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,21 +14,30 @@
  * limitations under the License.
  */
 
-.service-management {
-  padding-top: 12px;
-  .page-title {
-    height: 30px;
-    width: 100%;
-    line-height: 30px;
-    margin: 0 0 20px;
-  }
-  .title-item {
-    font-size: 14px;
-    color: #000;
-    margin-right: 8px;
-  }
-  .next-switch-off {
-    background-color: #f2f3f7;
-    border-color: #c4c6cf;
-  }
+.setting-box {
+  margin-top: 15px;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #f6f7fb;
+  border-radius: 0;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.text-box {
+  height: 140px;
+  display: flex;
+}
+
+.setting-checkbox {
+  flex: 1;
+  height: 100px;
+  box-sizing: border-box;
+}
+
+.setting-span {
+  font-size: 18px;
+  font-weight: normal;
+  margin-bottom: 15px;
 }
